<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhoneToComputer</string>
    <string name="go">Upload</string>
    <string name="text">Text:  </string>
    <string name="img">Img:   </string>
    <string name="text_hint">Paste text</string>
    <string name="img_hint">Select Img</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="host_title">Host</string>
    <string name="host_summary">Host Ip Address</string>
    <string name="default_host">0.0.0.0</string>
</resources>
